# image-segmentation

./: .gitignore  README.md
infence_python/: inference_ane.py  inference_gpu.py  pt2ct.py
inference_cpp/: CMakeLists.txt
inference_cpp/app/: main.cpp
train_python/: trainer.py
train_python/PTdata/: Dataset.py
train_python/datasets/: data_prep.ipynb
train_python/libs/models/: basic.py  classical_seg.py
train_python/libs/utils/: pytorchtools.py  segaug.py
train_python/models/: model_select.py
train_python/options/: config.py  config.yml
